--- a/Mod04_Tarefa_aula_03_a_05_(base) (1).ipynb
+++ b/Mod04_Tarefa_aula_03_a_05_(base) (1).ipynb
@@ -57,11 +57,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 27,
       "metadata": {
         "id": "JVmLXiC2C8-0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   mat  por  geo  ing  his  fis  qui\n",
+            "0    6    7    7    3    1    8    3\n",
+            "1   19   10    0    0    0   11    8\n",
+            "2   14   16    0    5    7    4    4\n",
+            "3   10    7    3    4    0    0    8\n",
+            "4    7    2    2    7    0    9    3\n",
+            "5   20    2    5    3    2    9    9\n",
+            "6    6    0    7    7    5    0    4\n",
+            "7   18    4    4    7    7    1    8\n",
+            "8   22    9    2    7    6    5    7\n",
+            "9   10    6    3    6    4    8    2\n",
+            "    mat   por   geo   ing   his   fis   qui\n",
+            "0  0.25  0.39  0.88  0.38  0.12  0.67  0.25\n",
+            "1  0.79  0.56  0.00  0.00  0.00  0.92  0.67\n",
+            "2  0.58  0.89  0.00  0.62  0.88  0.33  0.33\n",
+            "3  0.42  0.39  0.38  0.50  0.00  0.00  0.67\n",
+            "4  0.29  0.11  0.25  0.88  0.00  0.75  0.25\n",
+            "5  0.83  0.11  0.62  0.38  0.25  0.75  0.75\n",
+            "6  0.25  0.00  0.88  0.88  0.62  0.00  0.33\n",
+            "7  0.75  0.22  0.50  0.88  0.88  0.08  0.67\n",
+            "8  0.92  0.50  0.25  0.88  0.75  0.42  0.58\n",
+            "9  0.42  0.33  0.38  0.75  0.50  0.67  0.17\n",
+            "{'mat': 24, 'por': 18, 'geo': 8, 'ing': 8, 'his': 8, 'fis': 12, 'qui': 12}\n",
+            "   mat  por  geo  ing  his  fis  qui  total\n",
+            "0    6    7    7    3    1    8    3     35\n",
+            "1   19   10    0    0    0   11    8     48\n",
+            "2   14   16    0    5    7    4    4     50\n",
+            "3   10    7    3    4    0    0    8     32\n",
+            "4    7    2    2    7    0    9    3     30\n",
+            "5   20    2    5    3    2    9    9     50\n",
+            "6    6    0    7    7    5    0    4     29\n",
+            "7   18    4    4    7    7    1    8     49\n",
+            "8   22    9    2    7    6    5    7     58\n",
+            "9   10    6    3    6    4    8    2     39\n"
+          ]
+        }
+      ],
       "source": [
         "# 1) Percentual de acerto dos alunos por assunto\n",
         "dfs = [df_mat, df_por, df_geo, df_ing, df_his, df_fis, df_qui]\n",
@@ -70,10 +111,19 @@
         "quants= [24,18,8,8,8,12,12]\n",
         "\n",
         "materias = dict(zip(dfs_names,quants))\n",
-        "\n",
         "df = pd.concat(dfs,axis=1)\n",
         "df.columns = [f'{key}' for key in materias.keys()]\n",
-        "percents = df/materias.values()\n",
+        "percents = round(df/materias.values(),2)\n",
+        "\n",
+        "print(df.head(10))\n",
+        "print(percents.head(10))\n",
+        "print(materias)\n",
+        "\n",
+        "df['total'] = df.sum(axis=1)\n",
+        "print(df.head(10))\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
