mod05ex01 completo

--- a/Mod5Ex_aulas_01a03.ipynb
+++ b/Mod5Ex_aulas_01a03.ipynb
@@ -43,41 +43,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(27028, 69)\n"
+      "Shape: (27028, 69)\n",
+      "Shape após drop_duplicates, (27028, 69), continua o mesmo portanto não há duplicados.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(27028, 69)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 1) \n",
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "# 1) seu código aqui\n",
-    "sinasc = pd.read_csv('SINASC_RO_2019.csv',na_values='')\n",
-    "print(sinasc.shape)\n",
+    "sinasc = pd.read_csv('SINASC_RO_2019.csv')\n",
+    "print(f'Shape: {sinasc.shape}')\n",
+    "\n",
     "sinasc.drop_duplicates().shape\n",
-    "# Não há duplicados"
+    "print(f'Shape após drop_duplicates, {sinasc.shape}, continua o mesmo portanto não há duplicados.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +146,7 @@
        " 'munResArea': 1}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,13 +171,13 @@
     "    n_nas = dict(zip(colunas,lista_nas))    \n",
     "    return n_nas\n",
     "\n",
-    "verificadas = missing_verifier()\n",
-    "verificadas\n"
+    "verificadas1 = missing_verifier()\n",
+    "verificadas1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +194,13 @@
        " 'APGAR5': 103}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3) seu código aqui\n",
+    "# 3) \n",
     "#Verifica o número ds missing values em cada coluna\n",
     "def missing_verifier(lista_importatntes) -> dict:\n",
     "    \"\"\"\n",
@@ -227,27 +219,31 @@
     "    n_nas = dict(zip(colunas,lista_nas))    \n",
     "    return n_nas\n",
     "lista = ['LOCNASC', 'IDADEMAE', 'ESTCIVMAE', 'ESCMAE', 'QTDFILVIVO', 'GESTACAO', 'GRAVIDEZ', 'CONSULTAS', 'APGAR5'] \n",
-    "verificadas = missing_verifier(lista)\n",
-    "verificadas"
+    "verificadas2 = missing_verifier(lista)\n",
+    "verificadas2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'LOCNASC': 0, 'IDADEMAE': 0, 'ESTCIVMAE': 317, 'ESCMAE': 312, 'QTDFILVIVO': 1573, 'GESTACAO': 1232, 'GRAVIDEZ': 79, 'CONSULTAS': 0, 'APGAR5': 103}\n",
-      "{'LOCNASC': 0, 'IDADEMAE': 0, 'ESTCIVMAE': 317, 'ESCMAE': 312, 'QTDFILVIVO': 1573, 'GESTACAO': 1232, 'GRAVIDEZ': 79, 'CONSULTAS': 0, 'APGAR5': 103}\n"
+      "O número de missing values é: 103\n",
+      "O número de linhas é: 27028\n",
+      "===============================\n",
+      "O número de missing values após dropna() é: 0\n",
+      "O número de linhas após dropna() é: 26925\n"
      ]
     }
    ],
    "source": [
-    "# 4) seu código aqui\n",
-    "def missing_verifier(lista_importantes,df) -> dict:\n",
+    "# 4) \n",
+    "#Verifica o número ds missing values em cada coluna\n",
+    "def missing_verifier(lista,df) -> dict:\n",
     "    \"\"\"\n",
     "    Função que verifica coluna a coluna a quantidade de missing values.\n",
     "    \n",
@@ -259,65 +255,239 @@
     "    lista_nas = []\n",
     "    colunas = []\n",
     "    \n",
-    "    for i in lista_importantes:\n",
+    "    for i in lista:\n",
     "        lista_nas.append(df[i].isna().sum())\n",
     "        colunas.append(i)\n",
-    "    n_nas = dict(zip(colunas,lista_nas))    \n",
+    "    n_nas = dict(zip(colunas,lista_nas))\n",
+    "    df.dropna(subset='APGAR5', inplace=True)    \n",
     "    return n_nas\n",
     "\n",
+    "lista_importantes = ['LOCNASC', 'IDADEMAE', 'ESTCIVMAE', 'ESCMAE', 'QTDFILVIVO', 'GESTACAO', 'GRAVIDEZ', 'CONSULTAS', 'APGAR5'] \n",
+    "\n",
+    "nas = sinasc['APGAR5'].isna().sum()\n",
+    "linhas = sinasc['APGAR5'].shape\n",
+    "print(f'O número de missing values é: {nas}\\nO número de linhas é: {linhas[0]}')\n",
+    "\n",
+    "verificadas3 = missing_verifier(lista,sinasc)\n",
+    "\n",
+    "print('===============================')\n",
+    "nas = sinasc['APGAR5'].isna().sum()\n",
+    "linhas = sinasc['APGAR5'].shape\n",
+    "print(f'O número de missing values após dropna() é: {nas}\\nO número de linhas após dropna() é: {linhas[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de missing values: 315\n",
+      "Valores Únicos: \n",
+      "ESTCIVMAE\n",
+      "2.0    9906\n",
+      "1.0    8907\n",
+      "5.0    7145\n",
+      "4.0     451\n",
+      "9.0     144\n",
+      "3.0      57\n",
+      "Name: count, dtype: int64\n",
+      "Número de missing values: 0\n",
+      "Valores Únicos: \n",
+      "ESTCIVMAE\n",
+      "2.0    9906\n",
+      "1.0    8907\n",
+      "5.0    7145\n",
+      "9.0     459\n",
+      "4.0     451\n",
+      "3.0      57\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5) Observe que as variáveis `['ESTCIVMAE', 'CONSULTAS']` possuem o código `9`, que significa *ignorado*. Vamos assumir que o não preenchido é o mesmo que o código `9`.\n",
+    "\n",
+    "colunas_9 = ['ESTCIVMAE', 'CONSULTAS']\n",
+    "sinasc = pd.read_csv('SINASC_RO_2019.csv')\n",
+    "\n",
+    "missing_verifier(lista,sinasc)\n",
+    "\n",
+    "print(f'Número de missing values: {sinasc[\"ESTCIVMAE\"].isna().sum()}')\n",
+    "print(f'Valores Únicos: \\n{sinasc[\"ESTCIVMAE\"].value_counts()}')\n",
+    "\n",
+    "for i in colunas_9:\n",
+    "    sinasc[i].fillna(value=9, inplace=True)\n",
+    "\n",
+    "print(f'Número de missing values: {sinasc[\"ESTCIVMAE\"].isna().sum()}')\n",
+    "print(f'Valores Únicos: \\n{sinasc[\"ESTCIVMAE\"].value_counts()}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repare que o número de ocorrências do valor 9 subiu de 144 para 451."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de missing values: 1566\n",
+      "Valores Únicos: \n",
+      "QTDFILVIVO\n",
+      "1.0     9361\n",
+      "0.0     9305\n",
+      "2.0     4454\n",
+      "3.0     1362\n",
+      "4.0      475\n",
+      "5.0      212\n",
+      "6.0      106\n",
+      "7.0       41\n",
+      "8.0       23\n",
+      "9.0        8\n",
+      "10.0       6\n",
+      "12.0       3\n",
+      "11.0       1\n",
+      "30.0       1\n",
+      "14.0       1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Número de missing values: 0\n",
+      "Valores Únicos: \n",
+      "QTDFILVIVO\n",
+      "0.0     10871\n",
+      "1.0      9361\n",
+      "2.0      4454\n",
+      "3.0      1362\n",
+      "4.0       475\n",
+      "5.0       212\n",
+      "6.0       106\n",
+      "7.0        41\n",
+      "8.0        23\n",
+      "9.0         8\n",
+      "10.0        6\n",
+      "12.0        3\n",
+      "11.0        1\n",
+      "30.0        1\n",
+      "14.0        1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6) Seu código aqui \n",
+    "print(f'Número de missing values: {sinasc[\"QTDFILVIVO\"].isna().sum()}')\n",
+    "print(f'Valores Únicos: \\n{sinasc[\"QTDFILVIVO\"].value_counts()}\\n')\n",
+    "sinasc['QTDFILVIVO'].fillna(value=0, inplace=True)\n",
+    "print(f'Número de missing values: {sinasc[\"QTDFILVIVO\"].isna().sum()}')\n",
+    "print(f'Valores Únicos: \\n{sinasc[\"QTDFILVIVO\"].value_counts()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GESTACAO\n",
+      "37 a 41 semanas        22523\n",
+      "32 a 36 semanas         2234\n",
+      "42 semanas e mais        698\n",
+      "28 a 31 semanas          162\n",
+      "22 a 27 semanas           85\n",
+      "Menos de 22 semanas        7\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GESTACAO\n",
+       "37 a 41 semanas        22523\n",
+       "32 a 36 semanas         2234\n",
+       "9                       1216\n",
+       "42 semanas e mais        698\n",
+       "28 a 31 semanas          162\n",
+       "22 a 27 semanas           85\n",
+       "Menos de 22 semanas        7\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7) seu código aqui\n",
+    "colunas_9 = ['ESTCIVMAE', 'CONSULTAS']\n",
+    "sinasc = pd.read_csv('SINASC_RO_2019.csv')\n",
+    "\n",
+    "missing_verifier(lista,sinasc)\n",
+    "\n",
+    "print(sinasc['GESTACAO'].value_counts())\n",
+    "\n",
+    "sinasc['LOCNASC'].fillna(value=9, inplace=True)\n",
+    "\n",
+    "media = sinasc['IDADEMAE'].mean()\n",
+    "sinasc['IDADEMAE'].fillna(value=media, inplace=True)\n",
+    "\n",
+    "sinasc['ESCMAE'].fillna(value=9, inplace=True)\n",
+    "sinasc['GESTACAO'].fillna(value=9, inplace=True)\n",
+    "sinasc['GRAVIDEZ'].fillna(value=9, inplace=True)\n",
     "\n",
     "\n",
-    "lista = ['LOCNASC', 'IDADEMAE', 'ESTCIVMAE', 'ESCMAE', 'QTDFILVIVO', 'GESTACAO', 'GRAVIDEZ', 'CONSULTAS', 'APGAR5'] \n",
-    "verificadas = missing_verifier(lista,sinasc)\n",
-    "print(verificadas)\n",
-    "sinasc['APGAR5'].dropna(inplace=True)\n",
-    "verificadas = missing_verifier(lista,sinasc)\n",
-    "print(verificadas)\n"
+    "sinasc['GESTACAO'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "faixa_oms\n",
+       "normal            26463\n",
+       "asfixia_leve        320\n",
+       "asfixia_severa       74\n",
+       "nan                  68\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 5) seu código aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 6) Seu código aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 7) seu código aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 8) seu código aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 9) seu código aqui\n"
+    "# 8) seu código aqui\n",
+    "\n",
+    "#Entre 8 e 10 está em uma faixa 'normal'. \n",
+    "#Entre 6 e 7, significa que o recém-nascido passou por 'asfixia leve'. \n",
+    "#Entre 4 e 5 significa 'asfixia moderada'.\n",
+    "#Entre 0 e 3 significa 'asfixia severa'.  \n",
+    "\n",
+    "sinasc.loc[(sinasc['APGAR5'] >= 8) & (sinasc['APGAR5'] <= 10), 'faixa_oms' ] = 'normal'\n",
+    "sinasc.loc[(sinasc['APGAR5'] >= 6) & (sinasc['APGAR5'] <= 7), 'faixa_oms' ] = 'asfixia_leve'\n",
+    "sinasc.loc[(sinasc['APGAR5'] >= 5) & (sinasc['APGAR5'] <= 4), 'faixa_oms' ] = 'asfixia_moderada'\n",
+    "sinasc.loc[(sinasc['APGAR5'] >= 0) & (sinasc['APGAR5'] <= 3), 'faixa_oms' ] = 'asfixia_severa'\n",
+    "\n",
+    "sinasc['faixa_oms'].value_counts()"
    ]
   }
  ],
