--- a/Mod 07 - Tarefa 02.ipynb
+++ b/Mod 07 - Tarefa 02.ipynb
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "print(f\"Acurácia no caso de todos classificados como bons: {(cm[0,0]/np.sum(cm)) * 100:.2f}%\")"
+    "print(f\"Acurácia no caso de todos classificados como bom: {(cm[0,0]/np.sum(cm)) * 100:.2f}%\")"
    ]
   }
  ],
