--- a/Mod9Tarefa1.ipynb
+++ b/Mod9Tarefa1.ipynb
@@ -377,7 +377,7 @@
    "source": [
     "average_ages = sinasc_raw.groupby('munResNome').agg(\n",
     "    idade_media_mae=('IDADEMAE', 'mean'),\n",
-    "    idade_media_pai=('IDADEPAI', 'mean')  # Replace 'IDADEPAI' with the actual column name for father's age\n",
+    "    idade_media_pai=('IDADEPAI', 'mean')  \n",
     ").reset_index()\n",
     "\n",
     "print(average_ages)"
@@ -506,6 +506,17 @@
       "Idade média dos pais: 32.35267857142857\n",
       "Idade máxima dos pais: 65.0\n",
       "Idade mínima dos pais: 16.0\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
