--- a/MOD14T01.ipynb
+++ b/MOD14T01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T21:12:37.298706Z",
@@ -11,69 +11,21 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import time\n",
-    "\n",
-    "sns.set_theme()  \n"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No file updated in the last 10s.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pltr(value, index, func, ylabel, xlabel, opcao='nada'):\n",
     "\n",
@@ -125,9 +77,9 @@
     "    \"\"\"    \n",
     "    \n",
     "    folder_path = './input'\n",
-    "    time_threshold = time.time() - 10  # Set the threshold to 10 seconds ago\n",
+    "    time_threshold = time.time() - 10  # Configura o tempo de verificação.\n",
     "\n",
-    "    # Check if any file in the folder has been modified in the last 10 seconds\n",
+    "    # Checa se qualquer arquivo na pasta foi modificado nos últimos 10s.\n",
     "    updated_files = []\n",
     "    modification_times = []\n",
     "    for file in os.listdir(folder_path):\n",
@@ -135,18 +87,18 @@
     "            file_path = os.path.join(folder_path, file)\n",
     "            modification_times.append(os.path.getmtime(file_path))\n",
     "    if any(mod_time > time_threshold for mod_time in modification_times):\n",
-    "        updated_files.append(file_path)  # Add to the updated files list\n",
+    "        updated_files.append(file_path)  \n",
     "        print(f'Updated file found: {file_path}')\n",
     "    else:\n",
     "        print(f'No file updated in the last 10s.')\n",
     "\n",
-    "    # Process updated files if any\n",
+    "    # Caso encontrados, os arquivos são processados.\n",
     "    df = pd.DataFrame()\n",
     "    for file_path in updated_files:\n",
     "        print(f'Processing updated file: {file_path}')\n",
     "        df = pd.read_csv(file_path)\n",
     "\n",
-    "        # Generate the Pivot Table\n",
+    "        # Pivot Table\n",
     "        if opcao == 'default':\n",
     "            pd.pivot_table(df, \n",
     "                        values=value, \n",
@@ -166,16 +118,63 @@
     "        plt.ylabel(ylabel)\n",
     "        plt.xlabel(xlabel)\n",
     "        plt.show()\n",
-    "    return df\n",
-    "\n",
-    "# Example of calling the function\n",
-    "sinasc = pltr('PESO','DTNASC','mean','Media Peso Bebe','Data de Nascimento','unstack')  \n",
-    "sinasc.head()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No file updated in the last 10s.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinasc = pltr('PESO','DTNASC','mean','Media Peso Bebe','Data de Nascimento','default')  \n",
+    "sinasc.head()"
    ]
   }
  ],
