--- a/MOD14T01.ipynb
+++ b/MOD14T01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T21:12:37.298706Z",
@@ -21,20 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def pltr(value, index, func, ylabel, xlabel, opcao='nada'):\n",
+    "def pltr(value, index, func, ylabel, xlabel, opcao,freq):\n",
     "\n",
-    "    \"\"\"\n",
+    "    r\"\"\"\n",
+    "\n",
     "\n",
     "\n",
     "      /\\\\\\\\\\\\\\\\\\\\\\\\\\    /\\\\\\          /\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\    /\\\\\\\\\\\\\\\\\\             \n",
     "      \\/\\\\\\/////////\\\\\\ \\/\\\\\\         \\///////\\\\\\/////   /\\\\\\///////\\\\\\          \n",
-    "       \\/\\\\\\_______\\/\\\\\\ \\/\\\\\\               \\/\\\\\\       \\/\\\\\\     \\/\\\\\\         \n",
+    "       \\/\\\\\\       \\/\\\\\\ \\/\\\\\\               \\/\\\\\\       \\/\\\\\\     \\/\\\\\\         \n",
     "        \\/\\\\\\\\\\\\\\\\\\\\\\\\\\/  \\/\\\\\\               \\/\\\\\\       \\/\\\\\\\\\\\\\\\\\\\\\\/         \n",
     "         \\/\\\\\\/////////    \\/\\\\\\               \\/\\\\\\       \\/\\\\\\//////\\\\\\        \n",
     "          \\/\\\\\\             \\/\\\\\\               \\/\\\\\\       \\/\\\\\\    \\//\\\\\\      \n",
@@ -72,12 +73,10 @@
     "    |    configurado.                                                           |\n",
     "    |                                                                           |\n",
     "    -----------------------------------------------------------------------------\n",
-    "    \n",
-    "    \n",
     "    \"\"\"    \n",
     "    \n",
     "    folder_path = './input'\n",
-    "    time_threshold = time.time() - 10  # Configura o tempo de verificação.\n",
+    "    time_threshold = time.time() - freq  # Configura o tempo de verificação.\n",
     "\n",
     "    # Checa se qualquer arquivo na pasta foi modificado nos últimos 10s.\n",
     "    updated_files = []\n",
@@ -123,7 +122,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function pltr in module __main__:\n",
+      "\n",
+      "pltr(value, index, func, ylabel, xlabel, opcao, freq)\n",
+      "      /\\\\\\\\\\\\\\\\\\\\\\\\\\    /\\\\\\          /\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\    /\\\\\\\\\\\\\\\\\\             \n",
+      "      \\/\\\\\\/////////\\\\\\ \\/\\\\\\         \\///////\\\\\\/////   /\\\\\\///////\\\\\\          \n",
+      "       \\/\\\\\\       \\/\\\\\\ \\/\\\\\\               \\/\\\\\\       \\/\\\\\\     \\/\\\\\\         \n",
+      "        \\/\\\\\\\\\\\\\\\\\\\\\\\\\\/  \\/\\\\\\               \\/\\\\\\       \\/\\\\\\\\\\\\\\\\\\\\\\/         \n",
+      "         \\/\\\\\\/////////    \\/\\\\\\               \\/\\\\\\       \\/\\\\\\//////\\\\\\        \n",
+      "          \\/\\\\\\             \\/\\\\\\               \\/\\\\\\       \\/\\\\\\    \\//\\\\\\      \n",
+      "           \\/\\\\\\             \\/\\\\\\____________   \\/\\\\\\       \\/\\\\\\     \\//\\\\\\    \n",
+      "            \\/\\\\\\             \\/\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\   \\/\\\\\\       \\/\\\\\\      \\//\\\\\\  \n",
+      "             \\///              \\///////////////    \\///        \\///        \\///  \n",
+      "                                                                                 \n",
+      "    \n",
+      "    ============================================================================\n",
+      "    ||                               PLTR                                     ||\n",
+      "    ============================================================================\n",
+      "    \n",
+      "    Monitora diretório e plota gráficos no instante em que csvs são alterados.\n",
+      "    Uma vez detectado o csv, este é processado para gerar as séries de dados\n",
+      "    que serão plotadas. Pode-se customizar os dados através de qualquer função\n",
+      "    de agragação ou uma lsita delas.\n",
+      "    \n",
+      "    -----------------------------------------------------------------------------\n",
+      "    |                                                                           |\n",
+      "    |  Parametros:                                                              |\n",
+      "    |    value  - feature a ser agregada pela função.                           |\n",
+      "    |    index  - features a serem usadas como index da pivot table.            |  \n",
+      "    |    func   - funcao de agragação.                                          | \n",
+      "    |    ylabel - título do eixo y.                                             |\n",
+      "    |    xlabel - título do eixo y.                                             |                                     \n",
+      "    |    opcao  - modo de representação dos valores agregados                   |\n",
+      "    |    freq   - frequência de verificação.                                    |\n",
+      "    |                                                                           |    \n",
+      "    -----------------------------------------------------------------------------\n",
+      "    \n",
+      "    -----------------------------------------------------------------------------\n",
+      "    |                                                                           |\n",
+      "    |  Returna:                                                                 |\n",
+      "    |    Retorna um pandas dataframe com os dados processados e plota o gráfico |\n",
+      "    |    configurado.                                                           |\n",
+      "    |                                                                           |\n",
+      "    -----------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pltr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -132,49 +191,10 @@
      "text": [
       "No file updated in the last 10s.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sinasc = pltr('PESO','DTNASC','mean','Media Peso Bebe','Data de Nascimento','default')  \n",
-    "sinasc.head()"
+    "sinasc = pltr('PESO','DTNASC','mean','Media Peso Bebe','Data de Nascimento','default',10)  \n"
    ]
   }
  ],
