--- a/mod27_Tarefa01.ipynb
+++ b/mod27_Tarefa01.ipynb
@@ -48,7 +48,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# File paths\n",
     "filename_features = \"./features.txt\"\n",
     "filename_labels = \"./activity_labels.txt\"\n",
     "\n",
@@ -60,17 +59,16 @@
     "filename_xtest = \"./test/X_test.txt\"\n",
     "filename_ytest = \"./test/y_test.txt\"\n",
     "\n",
-    "# Load data\n",
     "features = pd.read_csv(filename_features, header=None, names=['nome_var'], sep=\"#\")\n",
-    "features = features['nome_var']  # Convert to Series manually\n",
+    "features = features['nome_var']  \n",
     "labels = pd.read_csv(filename_labels, delim_whitespace=True, header=None, names=['cod_label', 'label'])\n",
     "\n",
     "subject_train = pd.read_csv(filename_subtrain, header=None, names=['subject_id'])\n",
-    "X_train = pd.read_csv(filename_xtrain, delim_whitespace=True, header=None)  # Assuming feature names are correct\n",
+    "X_train = pd.read_csv(filename_xtrain, delim_whitespace=True, header=None)  \n",
     "y_train = pd.read_csv(filename_ytrain, header=None, names=['cod_label'])\n",
     "\n",
     "subject_test = pd.read_csv(filename_subtest, header=None, names=['subject_id'])\n",
-    "X_test = pd.read_csv(filename_xtest, delim_whitespace=True, header=None)  # Assuming feature names are correct\n",
+    "X_test = pd.read_csv(filename_xtest, delim_whitespace=True, header=None) \n",
     "y_test = pd.read_csv(filename_ytest, header=None, names=['cod_label'])"
    ]
   },
@@ -151,33 +149,25 @@
     }
    ],
    "source": [
-    "# PCA com uma única componente\n",
     "pca = PCA(n_components=1)\n",
     "\n",
-    "# Ajustar PCA nas variáveis explicativas (X_train e X_test)\n",
     "X_train_pca = pca.fit_transform(X_train)\n",
     "X_test_pca = pca.transform(X_test)\n",
     "\n",
-    "# Início da contagem de tempo\n",
     "start_time = time.time()\n",
     "\n",
-    "# Treinar uma árvore de decisão usando a primeira componente principal como variável\n",
     "clf_pca = DecisionTreeClassifier(ccp_alpha=0.001)\n",
     "clf_pca.fit(X_train_pca, y_train)\n",
     "\n",
-    "# Predições\n",
     "y_train_pred_pca = clf_pca.predict(X_train_pca)\n",
     "y_test_pred_pca = clf_pca.predict(X_test_pca)\n",
     "\n",
-    "# Avaliação da acurácia\n",
     "train_accuracy_pca = accuracy_score(y_train, y_train_pred_pca)\n",
     "test_accuracy_pca = accuracy_score(y_test, y_test_pred_pca)\n",
     "\n",
-    "# Fim da contagem de tempo\n",
     "end_time = time.time()\n",
     "processing_time_pca = end_time - start_time\n",
     "\n",
-    "# Resultados\n",
     "print(f\"Acurácia Treino (PCA 1 componente): {train_accuracy_pca:.4f}\")\n",
     "print(f\"Acurácia Teste (PCA 1 componente): {test_accuracy_pca:.4f}\")\n",
     "print(f\"Tempo de Processamento (PCA 1 componente): {processing_time_pca:.2f} segundos\")"
@@ -241,10 +231,8 @@
     }
    ],
    "source": [
-    "# List of number of components to test\n",
     "components_to_test = [1, 2, 5, 10, 50]\n",
     "\n",
-    "# Dictionary to store results\n",
     "results = {\n",
     "    'n_components': [],\n",
     "    'train_accuracy': [],\n",
@@ -252,49 +240,38 @@
     "    'processing_time': []\n",
     "}\n",
     "\n",
-    "# Loop through different numbers of PCA components\n",
     "for n_components in components_to_test:\n",
     "    print(f\"\\nTesting with {n_components} components:\")\n",
     "    \n",
-    "    # Apply PCA with the specified number of components\n",
     "    pca = PCA(n_components=n_components)\n",
     "    X_train_pca = pca.fit_transform(X_train)\n",
     "    X_test_pca = pca.transform(X_test)\n",
     "    \n",
-    "    # Início da contagem de tempo\n",
     "    start_time = time.time()\n",
     "    \n",
-    "    # Train Decision Tree Classifier\n",
     "    clf_pca = DecisionTreeClassifier(ccp_alpha=0.001)\n",
     "    clf_pca.fit(X_train_pca, y_train)\n",
     "    \n",
-    "    # Predições\n",
     "    y_train_pred_pca = clf_pca.predict(X_train_pca)\n",
     "    y_test_pred_pca = clf_pca.predict(X_test_pca)\n",
     "    \n",
-    "    # Avaliação da acurácia\n",
     "    train_accuracy_pca = accuracy_score(y_train, y_train_pred_pca)\n",
     "    test_accuracy_pca = accuracy_score(y_test, y_test_pred_pca)\n",
     "    \n",
-    "    # Fim da contagem de tempo\n",
     "    end_time = time.time()\n",
     "    processing_time_pca = end_time - start_time\n",
     "    \n",
-    "    # Store the results\n",
     "    results['n_components'].append(n_components)\n",
     "    results['train_accuracy'].append(train_accuracy_pca)\n",
     "    results['test_accuracy'].append(test_accuracy_pca)\n",
     "    results['processing_time'].append(processing_time_pca)\n",
     "    \n",
-    "    # Print results for this iteration\n",
     "    print(f\" - Acurácia Treino: {train_accuracy_pca:.4f}\")\n",
     "    print(f\" - Acurácia Teste: {test_accuracy_pca:.4f}\")\n",
     "    print(f\" - Tempo de Processamento: {processing_time_pca:.2f} segundos\")\n",
     "\n",
-    "# Convert the results dictionary to a DataFrame for better visualization\n",
     "results_df = pd.DataFrame(results)\n",
     "\n",
-    "# Display the final results\n",
     "print(\"\\nResumo dos Resultados:\")\n",
     "print(results_df)"
    ]
